--- a/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
+++ b/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Gold Sūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Suvarṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser gyi mdo</title>
                 <title type="mainTitle" xml:lang="bo">གསེར་གྱི་མདོ།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Suvarṇasūtra</title>
-                <title type="mainTitle" xml:lang="en">The Gold Sūtra</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa gser gyi mdo zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­suvarṇa­sūtra­nāma­mahāyāna­sūtra</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་གསེར་གྱི་མདོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Gold Sūtra”</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­suvarṇa­sūtra­nāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa gser gyi mdo zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་གསེར་གྱི་མདོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="zh">《黃金經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-27">
                     Translated by the Sakya Pandita Translation Group<lb/> under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-173">Khenpo Kalsang Gyaltsen</consultant>
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.3 <date>2021</date>
+                <edition>v 1.1.4 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -57,8 +57,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-22T15:53:33.251Z" user="admin">22/11/2021 15:53:33</note>
-
+                <note type="lastUpdated" date-time="2022-07-26T05:50:06.106Z" user="admin">26/07/2022 05:50:06</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-04-16T13:33:25.544Z" user="line-tofte">2.h</note>
@@ -93,17 +92,17 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2021-08-02T09:08:43.433Z" user="mike">2.a</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2021-08-02T09:08:43.433Z" user="mike">Auto
                     (update-publication-status)</note>
-            
-    <note type="updated" update="translation-status" value="2" date-time="2021-08-03T13:55:36.322Z" user="mike">2</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-03T13:55:36.322Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-08-04T09:36:10.807Z" user="mike">First Published Version</note>
-    <note type="updated" update="translation-status" value="1" date-time="2021-08-04T09:36:41.984Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-08-04T09:36:41.984Z" user="mike">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-08-04T10:01:37.295Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2021-08-06T11:57:27.525Z" user="john">Edited final paragraph of intro.</note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2021-09-03T13:25:29.625Z" user="celso">changed author statement, corrected 2 mis-spelled glossary entries</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2021-11-22T15:53:29.417Z" user="celso">added references to Peter Skillings 2021 anthology</note>
-</notesStmt>
+                <note type="updated" update="translation-status" value="2" date-time="2021-08-03T13:55:36.322Z" user="mike">2</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-03T13:55:36.322Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2021-08-04T09:36:10.807Z" user="mike">First Published Version</note>
+                <note type="updated" update="translation-status" value="1" date-time="2021-08-04T09:36:41.984Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2021-08-04T09:36:41.984Z" user="mike">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2021-08-04T10:01:37.295Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.1.1" date-time="2021-08-06T11:57:27.525Z" user="john">Edited final paragraph of intro.</note>
+                <note type="updated" update="text-version" value="1.1.2" date-time="2021-09-03T13:25:29.625Z" user="celso">changed author statement, corrected 2 mis-spelled glossary entries</note>
+                <note type="updated" update="text-version" value="1.1.3" date-time="2021-11-22T15:53:29.417Z" user="celso">added references to Peter Skillings 2021 anthology</note>
+                <note type="updated" update="text-version" value="1.1.4" date-time="2022-07-26T05:49:58.415Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
