--- a/translations/kangyur/translations/055-001_toh127_king_of_samadhis.xml
+++ b/translations/kangyur/translations/055-001_toh127_king_of_samadhis.xml
@@ -4,24 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">ting nge ’dzin gyi rgyal po’i mdo</title>
-                <title type="mainTitle" xml:lang="bo">ཏིང་ངེ་འཛིན་གྱི་རྒྱལ་པོའི་མདོ།</title>
                 <title type="mainTitle" xml:lang="en">The King of Samādhis Sūtra</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Samādhi­rāja­sūtra</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཆོས་ཐམས་ཅད་ཀྱི་རང་བཞིན་མཉམ་པ་ཉིད་རྣམ་པར་སྤྲོས་པ་ཏིང་ངེ་འཛིན་གྱི་རྒྱལ་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa chos thams cad kyi rang bzhin
-                    mnyam pa nyid rnam par spros pa ting nge ’dzin gyi rgyal po zhes bya ba theg pa
-                    chen po’i mdo</title>
-                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The King of Samādhis, the
-                    Revealed Equality of the Nature of All Phenomena”</title>
+                <title type="mainTitle" xml:lang="bo">ཏིང་ངེ་འཛིན་གྱི་རྒྱལ་པོའི་མདོ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">ting nge ’dzin gyi rgyal po’i mdo</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The King of Samādhis, the Revealed Equality of the Nature of All Phenomena”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­dharma­svabhāva­samatāvipañcita­samādhi­rāja­nāma­mahā­yāna­sūtra</title>
-                <title type="otherTitle" xml:lang="zh">三摩地王經</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa chos thams cad kyi rang bzhin mnyam pa nyid rnam par spros pa ting nge ’dzin gyi rgyal po zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཆོས་ཐམས་ཅད་ཀྱི་རང་བཞིན་མཉམ་པ་ཉིད་རྣམ་པར་སྤྲོས་པ་ཏིང་ངེ་འཛིན་གྱི་རྒྱལ་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="zh">《三摩地王經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-22">Translated by Peter
                     Alan Roberts<lb/>under the patronage and supervision of 84000: Translating the
                     Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-142">Peter Alan Roberts</author>
                 <consultant role="advisor" ref="contributors.xml#person-147">Ling-Lung Chen</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
                 <editor role="reviser" ref="contributors.xml#person-143">Emily Bower</editor>
                 <editor role="reviser" ref="contributors.xml#person-232">Ben Gleason</editor>
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-92">Laura Goetz</editor>
@@ -30,7 +27,7 @@
                 <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.45.22 <date>2022</date>
+                <edition>v 1.45.23 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +63,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T15:48:11.095Z" user="admin">29/06/2022 15:48:11</note>
+                <note type="lastUpdated" date-time="2022-07-26T05:51:06.614Z" user="admin">26/07/2022 05:51:06</note>
                 <note type="updated" update="text-version" value="v 1.34" date-time="2019-03-18T11:06:14.991Z" user="john">v 1.34 2018</note>
                 <note type="updated" update="text-version" value="v 1.35" date-time="2019-03-18T11:34:16.438Z" user="john">v 1.35 2018</note>
                 <note type="updated" update="text-version" value="v 1.37" date-time="2019-04-16T16:42:43.647Z" user="john">v 1.37 2018</note>
@@ -74,31 +71,31 @@
                 <note type="updated" update="text-version" value="v 1.41" date-time="2019-06-24T17:44:54.159Z" user="celso">v 1.41 2019</note>
                 <note type="updated" update="text-version" value="v 1.42" date-time="2019-08-07T20:57:39.221Z" user="laura">v 1.42 2019</note>
                 <note type="updated" update="text-version" value="v 1.43" date-time="2019-08-09T17:02:26.347Z" user="celso">v 1.43 2019</note>
-            <note type="updated" update="text-version" value="v 1.44" date-time="2019-08-12T15:20:34.115Z" user="laura">v 1.44 2019</note>
-<note type="updated" update="text-version" value="v 1.45.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
-<note type="updated" update="text-version" value="v 1.45.2" date-time="2019-11-04T08:23:13.145Z" user="admin">Test RDF generation</note>
-<note type="updated" update="text-version" value="v 1.45.3" date-time="2020-01-28T17:13:00.005Z" user="laura">Added glossary entries for Meru and Sumeru the bodhisattvas</note>
-    <note type="updated" update="text-version" value="v 1.45.4" date-time="2020-07-10T11:53:06.171Z" user="andre">Corrections to definitions related to sangs rgyas kyi chos</note>
-    <note type="updated" update="text-version" value="v 1.45.5" date-time="2020-07-15T15:32:31.322Z" user="celso">Updated the milestones to only be child of &lt;item&gt;s and never &lt;list&gt; following schema update.</note>
-    <note type="updated" update="text-version" value="1.45.6" date-time="2020-08-31T19:03:23.944Z" user="laura">edited acknowledgement</note>
-    <note type="updated" update="text-version" value="1.45.7" date-time="2020-11-04T21:45:26.761Z" user="laura">Corrected error (missing space) in Wylie for Maudgalyāyana</note>
-    <note type="updated" update="text-version" value="1.45.8" date-time="2020-11-23T14:16:59.523Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.45.9" date-time="2020-11-25T16:01:27.516Z" user="celso">Updated pending links</note>
-    <note type="updated" update="text-version" value="1.45.10" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.45.11" date-time="2021-01-04T21:52:38.176Z" user="laura">Updated colophon and glossary to Bandé</note>
-    <note type="updated" update="text-version" value="1.45.12" date-time="2021-02-01T21:04:32.326Z" user="celso">updated entry for prātimokṣa</note>
-    <note type="updated" update="text-version" value="1.45.13" date-time="2021-03-31T23:08:25.405Z" user="konchog">One tiny spelling fix.</note>
-    <note type="updated" update="text-version" value="1.45.14" date-time="2021-04-22T14:04:20.175Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
-    <note type="updated" update="text-version" value="1.45.15" date-time="2021-07-22T00:19:51.809Z" user="celso">kiṃnara to kinnara, fixed a glossary entry</note>
-    <note type="updated" update="text-version" value="1.45.16" date-time="2021-08-01T06:50:10.53Z" user="andre">fixed typo in Tib - glossary</note>
-    <note type="updated" update="text-version" value="1.45.17" date-time="2021-11-03T17:34:24.765Z" user="celso">activated pending link</note>
-
-    <note type="updated" update="text-version" value="1.45.18" date-time="2021-11-03T18:03:27.157Z" user="celso">activated pending link and adjucsted bibl entries</note>
-    <note type="updated" update="text-version" value="1.45.19" date-time="2022-03-09T20:29:32.514Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
-    <note type="updated" update="text-version" value="1.45.20" date-time="2022-03-11T13:43:53.467Z" user="laura">Minor issue with glossary link</note>
-    <note type="updated" update="text-version" value="1.45.21" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
-    <note type="updated" update="text-version" value="1.45.22" date-time="2022-06-29T15:48:07Z" user="martina-cotter">Added pending links.</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="v 1.44" date-time="2019-08-12T15:20:34.115Z" user="laura">v 1.44 2019</note>
+                <note type="updated" update="text-version" value="v 1.45.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
+                <note type="updated" update="text-version" value="v 1.45.2" date-time="2019-11-04T08:23:13.145Z" user="admin">Test RDF generation</note>
+                <note type="updated" update="text-version" value="v 1.45.3" date-time="2020-01-28T17:13:00.005Z" user="laura">Added glossary entries for Meru and Sumeru the bodhisattvas</note>
+                <note type="updated" update="text-version" value="v 1.45.4" date-time="2020-07-10T11:53:06.171Z" user="andre">Corrections to definitions related to sangs rgyas kyi chos</note>
+                <note type="updated" update="text-version" value="v 1.45.5" date-time="2020-07-15T15:32:31.322Z" user="celso">Updated the milestones to only be child of &lt;item&gt;s and never &lt;list&gt; following schema update.</note>
+                <note type="updated" update="text-version" value="1.45.6" date-time="2020-08-31T19:03:23.944Z" user="laura">edited acknowledgement</note>
+                <note type="updated" update="text-version" value="1.45.7" date-time="2020-11-04T21:45:26.761Z" user="laura">Corrected error (missing space) in Wylie for Maudgalyāyana</note>
+                <note type="updated" update="text-version" value="1.45.8" date-time="2020-11-23T14:16:59.523Z" user="admin">Auto (TEI migration 2.0.0)</note>
+                <note type="updated" update="text-version" value="1.45.9" date-time="2020-11-25T16:01:27.516Z" user="celso">Updated pending links</note>
+                <note type="updated" update="text-version" value="1.45.10" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+                <note type="updated" update="text-version" value="1.45.11" date-time="2021-01-04T21:52:38.176Z" user="laura">Updated colophon and glossary to Bandé</note>
+                <note type="updated" update="text-version" value="1.45.12" date-time="2021-02-01T21:04:32.326Z" user="celso">updated entry for prātimokṣa</note>
+                <note type="updated" update="text-version" value="1.45.13" date-time="2021-03-31T23:08:25.405Z" user="konchog">One tiny spelling fix.</note>
+                <note type="updated" update="text-version" value="1.45.14" date-time="2021-04-22T14:04:20.175Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
+                <note type="updated" update="text-version" value="1.45.15" date-time="2021-07-22T00:19:51.809Z" user="celso">kiṃnara to kinnara, fixed a glossary entry</note>
+                <note type="updated" update="text-version" value="1.45.16" date-time="2021-08-01T06:50:10.53Z" user="andre">fixed typo in Tib - glossary</note>
+                <note type="updated" update="text-version" value="1.45.17" date-time="2021-11-03T17:34:24.765Z" user="celso">activated pending link</note>
+                <note type="updated" update="text-version" value="1.45.18" date-time="2021-11-03T18:03:27.157Z" user="celso">activated pending link and adjucsted bibl entries</note>
+                <note type="updated" update="text-version" value="1.45.19" date-time="2022-03-09T20:29:32.514Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
+                <note type="updated" update="text-version" value="1.45.20" date-time="2022-03-11T13:43:53.467Z" user="laura">Minor issue with glossary link</note>
+                <note type="updated" update="text-version" value="1.45.21" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.45.22" date-time="2022-06-29T15:48:07Z" user="martina-cotter">Added pending links.</note>
+                <note type="updated" update="text-version" value="1.45.23" date-time="2022-07-26T05:51:04.424Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
             <!--<notesStmt>
                 <note type="lastUpdated">Last updated at 06/01/2018 at 14:00:24 by celso</note>
             </notesStmt>-->
