--- a/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
+++ b/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
@@ -4,18 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rab tu zhi ba rnam par nges pa’i cho ’phrul gyi ting nge
-                    ’dzin</title>
-                <title type="mainTitle" xml:lang="bo">རབ་ཏུ་ཞི་བ་རྣམ་པར་ངེས་པའི་ཆོ་འཕྲུལ་གྱི་ཏིང་ངེ་འཛིན།</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Praśāntaviniścayaprātihāryasamādhi</title>
                 <title type="mainTitle" xml:lang="en">The Absorption of the Miraculous Ascertainment of Peace</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rab tu zhi ba rnam par nges pa’i cho ’phrul gyi ting
-                    nge ’dzin zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་རབ་ཏུ་ཞི་བ་རྣམ་པར་ངེས་པའི་ཆོ་འཕྲུལ་གྱི་ཏིང་ངེ་འཛིན་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­praśāntaviniścayaprātihārya­nāma­samādhi­mahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Praśāntaviniścayaprātihāryasamādhi</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rab tu zhi ba rnam par nges pa’i cho ’phrul gyi ting nge ’dzin</title>
+                <title type="mainTitle" xml:lang="bo">རབ་ཏུ་ཞི་བ་རྣམ་པར་ངེས་པའི་ཆོ་འཕྲུལ་གྱི་ཏིང་ངེ་འཛིན།</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Absorption of the Miraculous Ascertainment of Peace”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­praśāntaviniścayaprātihārya­nāma­samādhi­mahāyānasūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rab tu zhi ba rnam par nges pa’i cho ’phrul gyi ting nge ’dzin zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་རབ་ཏུ་ཞི་བ་རྣམ་པར་ངེས་པའི་ཆོ་འཕྲུལ་གྱི་ཏིང་ངེ་འཛིན་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryapraśāntaviniścaya­prātihārya­nāmasamādhi­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">寂照神變三摩地經</title>
+                <title type="otherTitle" xml:lang="zh">《寂照神變三摩地經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/> under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <editor role="associateEditor" ref="contributors.xml#person-99">Thomas Cruijsen</editor>
                 <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
@@ -33,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-180">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.22 <date>2021</date>
+                <edition>v 1.3.23 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-13T14:29:30.708Z" user="admin">13/06/2022 14:29:30</note>
+                <note type="lastUpdated" date-time="2022-07-26T05:52:11.906Z" user="admin">26/07/2022 05:52:11</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-05-29T11:54:09.215Z" user="james">2.c</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:56.467Z" user="mike">2.d</note>
@@ -75,44 +73,45 @@
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-02-13T07:19:51.672Z" user="andreas">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2020-02-14T07:37:32.449Z" user="andreas">2.c</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2020-03-17T16:16:41.28Z" user="line-tofte">2.b</note>
-            
-    <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-16T11:33:16.81Z" user="andre">Mark-up concluded - all issues resolved per editor's instructions</note>
-    <note type="updated" update="text-version" value="v 0.1.1" date-time="2020-04-16T13:53:07.866Z" user="celso">Fixed a few markup details after Andre's markup</note>
-    <note type="updated" update="translation-status" value="2" date-time="2020-04-16T13:53:07.866Z" user="celso">Fixed a few markup details after Andre's markup</note>
-    <note type="updated" update="text-version" value="v 0.1.2" date-time="2020-04-16T16:48:35.713Z" user="celso">Trimmed the milestones down a bit.</note>
-    <note type="updated" update="text-version" value="v 0.1.3" date-time="2020-04-25T18:23:39.645Z" user="celso">Added non-breaking spaces to ellipses</note>
-    <note type="updated" update="text-version" value="v 0.2.0" date-time="2020-05-28T10:13:26.081Z" user="mike">added sponsorship acknowledgment</note>
-    <note type="updated" update="text-version" value="v 0.2.1" date-time="2020-05-28T13:09:03.058Z" user="laura">Added line to acknowledgement</note>
-    <note type="updated" update="text-version" value="0.9.1" date-time="2020-08-26T11:37:27.053Z" user="john">Version undergoing revision by John for publication</note>
-    <note type="updated" update="text-version" value="0.9.2" date-time="2020-08-26T11:38:42.092Z" user="john">Same</note>
-    <note type="updated" update="text-version" value="0.9.3" date-time="2020-09-01T18:06:22.584Z" user="john">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="1" date-time="2020-09-01T18:09:12.159Z" user="john">1</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2020-09-01T18:09:12.159Z" user="john">First published version.</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2020-09-02T11:45:58.076Z" user="john">Added material to Intro, notes, and biblio.</note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2020-09-02T11:46:56.133Z" user="john">Corrected publication date</note>
-    <note type="updated" update="text-version" value="1.2.1" date-time="2020-09-11T13:47:00.519Z" user="john">Additions and edits to intro and notes re Skilton 2002.</note>
-    <note type="updated" update="text-version" value="1.2.2" date-time="2020-09-11T13:47:58.354Z" user="john">1.2.2</note>
-    <note type="updated" update="text-version" value="1.3.1" date-time="2020-09-11T18:12:34.037Z" user="john">More edits to intro, notes, and a couple of text changes.</note>
-    <note type="updated" update="text-version" value="1.3.2" date-time="2020-09-11T18:22:06.039Z" user="john">Typo corrected</note>
-    <note type="updated" update="text-version" value="1.3.3" date-time="2020-09-11T20:40:45.524Z" user="john">Further editing and additions.</note>
-    <note type="updated" update="text-version" value="1.3.4" date-time="2020-10-01T09:45:14.615Z" user="mike">wiesiek's typos corrected</note>
-    <note type="updated" update="text-version" value="1.3.5" date-time="2020-10-05T09:26:34.603Z" user="mike">typos corrected</note>
-    <note type="updated" update="text-version" value="1.3.6" date-time="2020-10-26T12:25:40.994Z" user="mike">Dion's corrections added</note>
-    <note type="updated" update="text-version" value="1.3.7" date-time="2020-10-27T07:12:04.683Z" user="mike">corrections from David</note>
-    <note type="updated" update="text-version" value="1.3.8" date-time="2020-11-06T19:05:39.107Z" user="john">Some minor corrections</note>
-    <note type="updated" update="text-version" value="1.3.9" date-time="2020-11-18T18:25:57.11Z" user="laura">Edited a few typos in the glossary</note>
-    <note type="updated" update="text-version" value="1.3.10" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.3.11" date-time="2020-11-25T16:01:52.795Z" user="celso">Updated pending links</note>
-    <note type="updated" update="text-version" value="1.3.12" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.3.13" date-time="2021-01-04T21:55:54.3Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.3.14" date-time="2021-02-07T15:35:19.874Z" user="celso">fixed bad links x2</note>
-    <note type="updated" update="text-version" value="1.3.15" date-time="2021-02-12T18:42:42.612Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.3.16" date-time="2021-03-12T18:39:20.314Z" user="celso">Non-breaking spaces before dandas</note>
-    <note type="updated" update="text-version" value="1.3.17" date-time="2021-04-15T12:08:17.226Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.3.18" date-time="2021-04-15T12:08:47.903Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.3.19" date-time="2021-04-15T12:09:05.065Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.3.20" date-time="2021-04-22T14:08:39.783Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
-    <note type="updated" update="text-version" value="1.3.21" date-time="2021-07-22T00:10:04.419Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.3.22" date-time="2022-06-13T14:29:26.81Z" user="konchog">One small fix to bibliography.</note>
+                <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-16T11:33:16.81Z" user="andre">Mark-up concluded - all issues resolved per editor's instructions</note>
+                <note type="updated" update="text-version" value="v 0.1.1" date-time="2020-04-16T13:53:07.866Z" user="celso">Fixed a few markup details after Andre's markup</note>
+                <note type="updated" update="translation-status" value="2" date-time="2020-04-16T13:53:07.866Z" user="celso">Fixed a few markup details after Andre's markup</note>
+                <note type="updated" update="text-version" value="v 0.1.2" date-time="2020-04-16T16:48:35.713Z" user="celso">Trimmed the milestones down a bit.</note>
+                <note type="updated" update="text-version" value="v 0.1.3" date-time="2020-04-25T18:23:39.645Z" user="celso">Added non-breaking spaces to ellipses</note>
+                <note type="updated" update="text-version" value="v 0.2.0" date-time="2020-05-28T10:13:26.081Z" user="mike">added sponsorship acknowledgment</note>
+                <note type="updated" update="text-version" value="v 0.2.1" date-time="2020-05-28T13:09:03.058Z" user="laura">Added line to acknowledgement</note>
+                <note type="updated" update="text-version" value="0.9.1" date-time="2020-08-26T11:37:27.053Z" user="john">Version undergoing revision by John for publication</note>
+                <note type="updated" update="text-version" value="0.9.2" date-time="2020-08-26T11:38:42.092Z" user="john">Same</note>
+                <note type="updated" update="text-version" value="0.9.3" date-time="2020-09-01T18:06:22.584Z" user="john">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1" date-time="2020-09-01T18:09:12.159Z" user="john">1</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2020-09-01T18:09:12.159Z" user="john">First published version.</note>
+                <note type="updated" update="text-version" value="1.1.1" date-time="2020-09-02T11:45:58.076Z" user="john">Added material to Intro, notes, and biblio.</note>
+                <note type="updated" update="text-version" value="1.1.2" date-time="2020-09-02T11:46:56.133Z" user="john">Corrected publication date</note>
+                <note type="updated" update="text-version" value="1.2.1" date-time="2020-09-11T13:47:00.519Z" user="john">Additions and edits to intro and notes re Skilton 2002.</note>
+                <note type="updated" update="text-version" value="1.2.2" date-time="2020-09-11T13:47:58.354Z" user="john">1.2.2</note>
+                <note type="updated" update="text-version" value="1.3.1" date-time="2020-09-11T18:12:34.037Z" user="john">More edits to intro, notes, and a couple of text changes.</note>
+                <note type="updated" update="text-version" value="1.3.2" date-time="2020-09-11T18:22:06.039Z" user="john">Typo corrected</note>
+                <note type="updated" update="text-version" value="1.3.3" date-time="2020-09-11T20:40:45.524Z" user="john">Further editing and additions.</note>
+                <note type="updated" update="text-version" value="1.3.4" date-time="2020-10-01T09:45:14.615Z" user="mike">wiesiek's typos corrected</note>
+                <note type="updated" update="text-version" value="1.3.5" date-time="2020-10-05T09:26:34.603Z" user="mike">typos corrected</note>
+                <note type="updated" update="text-version" value="1.3.6" date-time="2020-10-26T12:25:40.994Z" user="mike">Dion's corrections added</note>
+                <note type="updated" update="text-version" value="1.3.7" date-time="2020-10-27T07:12:04.683Z" user="mike">corrections from David</note>
+                <note type="updated" update="text-version" value="1.3.8" date-time="2020-11-06T19:05:39.107Z" user="john">Some minor corrections</note>
+                <note type="updated" update="text-version" value="1.3.9" date-time="2020-11-18T18:25:57.11Z" user="laura">Edited a few typos in the glossary</note>
+                <note type="updated" update="text-version" value="1.3.10" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+                <note type="updated" update="text-version" value="1.3.11" date-time="2020-11-25T16:01:52.795Z" user="celso">Updated pending links</note>
+                <note type="updated" update="text-version" value="1.3.12" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+                <note type="updated" update="text-version" value="1.3.13" date-time="2021-01-04T21:55:54.3Z" user="laura">Updated colophon to Bandé</note>
+                <note type="updated" update="text-version" value="1.3.14" date-time="2021-02-07T15:35:19.874Z" user="celso">fixed bad links x2</note>
+                <note type="updated" update="text-version" value="1.3.15" date-time="2021-02-12T18:42:42.612Z" user="celso">"scholar" to "preceptor" in colophon</note>
+                <note type="updated" update="text-version" value="1.3.16" date-time="2021-03-12T18:39:20.314Z" user="celso">Non-breaking spaces before dandas</note>
+                <note type="updated" update="text-version" value="1.3.17" date-time="2021-04-15T12:08:17.226Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.3.18" date-time="2021-04-15T12:08:47.903Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.3.19" date-time="2021-04-15T12:09:05.065Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="1.3.20" date-time="2021-04-22T14:08:39.783Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
+                <note type="updated" update="text-version" value="1.3.21" date-time="2021-07-22T00:10:04.419Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="text-version" value="1.3.22" date-time="2022-06-13T14:29:26.81Z" user="konchog">One small fix to bibliography.</note>
+                <note type="updated" update="text-version" value="1.3.23" date-time="2022-07-26T05:52:04.143Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
