--- a/translations/kangyur/placeholders/055-006_toh132-the_sutra_on_the_samadhi_of_valiant_progress.xml
+++ b/translations/kangyur/placeholders/055-006_toh132-the_sutra_on_the_samadhi_of_valiant_progress.xml
@@ -4,18 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dpa' bar 'gro ba'i ting nge 'dzin gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">śūraṅgamasamādhisūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Samādhi of Valiant Progress</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dpa' bar 'gro ba'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">śūraṅgamasamādhisūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dpa' bar 'gro ba'i ting nge 'dzin gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaśūraṅgamasamādhi­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="zh">《勇行三昧經》 （大正藏：《佛說首楞嚴三昧經》）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dpa' bar 'gro ba'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="contributors.xml#team-67"/>
+                <author role="translatorEng" ref="contributors.xml#person-204">ErdeneBaatar Erdene-Ochir</author>
+                <sponsor ref="eft:sponsor-219">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-055-006"/>
                 <date/>
             </publicationStmt>
@@ -31,11 +34,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-13T14:29:46.136Z" user="admin">13/07/2021 14:29:46</note>
+                <note type="lastUpdated" date-time="2022-07-26T05:53:16.317Z" user="admin">26/07/2022 05:53:16</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:32:00.063Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T16:47:53.597Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-07-13T14:29:41.423Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-13T14:29:41.423Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-07-13T14:29:41.423Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-13T14:29:41.423Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-09-27T12:02:22.786Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-27T12:02:22.786Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-27T12:02:40.561Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-27T12:02:55.857Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-12-24T05:19:46.507Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-24T05:21:50.414Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T05:53:10.499Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
