--- a/translations/kangyur/placeholders/056-001_toh133-the_sutra_on_the_samadhi_in_which_the_buddhas_of_the_present_all_stand_before_one.xml
+++ b/translations/kangyur/placeholders/056-001_toh133-the_sutra_on_the_samadhi_in_which_the_buddhas_of_the_present_all_stand_before_one.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">da ltar gyi sangs rgyas mngon sum du bzhugs pa'i ting nge 'dzin gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pratyutpannabuddha­saṃmukhāvasthita­samādhisūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Samādhi in which the Buddhas of the Present All Stand Before One</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa da ltar gyi sangs rgyas mngon sum du bzhugs pa'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">pratyutpannabuddha­saṃmukhāvasthita­samādhisūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">da ltar gyi sangs rgyas mngon sum du bzhugs pa'i ting nge 'dzin gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapratyutpannabuddha­saṃmukhāvasthitasamādhi­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">bzang skyong gis zhus pa'i ting 'dzin le'u/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">bhadrapāla(paripṛcchā)sūtra</title>
                 <title type="otherTitle" xml:lang="zh">《現前佛面前安住三昧經》（大正藏：《般舟三昧經》）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">bzang skyong gis zhus pa'i ting 'dzin le'u/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa da ltar gyi sangs rgyas mngon sum du bzhugs pa'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
+                <sponsor ref="eft:sponsor-206">Kelvin Lee, Doris Lim, Chang Chen Hsien, Gephel Lim, Ng Ah Chon &amp; all sentient beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.7 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -32,9 +33,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T16:48:38.017Z" user="admin">10/05/2021 16:48:38</note>
-            <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:32:48.384Z" user="amy">Auto (update-titles)</note>
+                <note type="lastUpdated" date-time="2022-07-26T05:54:23.62Z" user="admin">26/07/2022 05:54:23</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:32:48.384Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T16:48:35.265Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-09T13:32:09.345Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-18T11:49:09Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-03-18T11:51:55.736Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-03-18T11:53:08.681Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T05:54:21.595Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
