--- a/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
+++ b/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">khye'u bzhi'i ting nge 'dzin gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caturdārakasamādhisūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on the Samādhi of the Four Youths</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khye'u bzhi'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">caturdārakasamādhisūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">khye'u bzhi'i ting nge 'dzin gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacaturdārakasamādhi­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="zh">《四童子三昧經》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khye'u bzhi'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-9"/>
-            <author role="translatorEng" ref="contributors.xml#person-74">Ryan Damron</author>
-    <sponsor ref="sponsors.xml#sponsor-203">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <author role="translatorEng" ref="contributors.xml#person-74">Ryan Damron</author>
+                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <sponsor ref="sponsors.xml#sponsor-203">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -36,12 +36,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-08-19T10:37:00.718Z" user="admin">19/08/2020 10:37:00</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-01-16T19:43:20.628Z" user="andreas">0.0.1</note>
-<note type="updated" update="translation-status" value="2.g" date-time="2020-01-16T19:43:20.628Z" user="andreas">2.g</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:00:38.22Z" user="mike">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:36:59.063Z" user="admin">0.0.2</note>
+                <note type="lastUpdated" date-time="2022-07-26T05:55:45.27Z" user="admin">26/07/2022 05:55:45</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-16T19:43:20.628Z" user="andreas">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2020-01-16T19:43:20.628Z" user="andreas">2.g</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:00:38.22Z" user="mike">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:36:59.063Z" user="admin">0.0.2</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T05:55:43.25Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
