--- a/translations/kangyur/translations/056-007_toh139-the_dharani_of_the_vajra_quintessence.xml
+++ b/translations/kangyur/translations/056-007_toh139-the_dharani_of_the_vajra_quintessence.xml
@@ -6,14 +6,15 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Vajra Quintessence</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Vajra­maṇḍa­dhāraṇī</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje snying po’i gzungs</title>
                 <title type="mainTitle" xml:lang="bo">རྡོ་རྗེ་སྙིང་པོའི་གཟུངས།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje snying po’i gzungs</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Dhāraṇī of the Vajra Quintessence”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­vajra­maṇḍa­nāma­dhāraṇī­mahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rdo rje snying po’i gzungs zhes bya ba theg pa chen po’i mdo</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་རྡོ་རྗེ་སྙིང་པོའི་གཟུངས་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Vajra­maṇḍanāma­dhāraṇīsūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje’i snying po’i gzungs kyi mdo/</title>
+                <title type="otherTitle" xml:lang="zh">《金剛心髓陀羅尼經》 (大正藏：《金剛場陀羅尼經》)</title>
                 <author role="translatorMain" ref="eft:team-11">Translated by David Jackson<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="eft:person-14">David Jackson</author>
@@ -27,7 +28,7 @@
                 <editor role="finalReviewer" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2022</date>
+                <edition>v 1.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-16T14:56:51.907Z" user="admin">16/05/2022 14:56:51</note>
+                <note type="lastUpdated" date-time="2022-07-26T05:57:57.657Z" user="admin">26/07/2022 05:57:57</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:13:33.606Z" user="mike">2.d</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:25:51.534Z" user="line-tofte">2.h</note>
@@ -92,14 +93,13 @@
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-11-26T19:26:19.797Z" user="john">Various minor corrections and edits: Sanskrit short title, dharanis in Degé, A instead of dPe for Pedurma, spelling inconsistencies in names, added/moved line breaks, de-capitalized Wylie, etc. </note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2021-11-26T19:58:39.412Z" user="john">Further small corrections.</note>
                 <note type="updated" update="text-version" value="1.0.3" date-time="2021-11-26T20:01:54.183Z" user="john">Further tiny one.</note>
-            
-    <note type="updated" update="text-version" value="1.0.5" date-time="2021-11-26T20:36:11.854Z" user="john">Added refs to 2 dhāraṇīs not duplicated in Dh. section.</note>
-
-    <note type="updated" update="text-version" value="1.0.6" date-time="2021-11-29T20:02:32.125Z" user="john">Removed sigla G and A and gave correct variant references.</note>
-
-    <note type="updated" update="text-version" value="1.0.7" date-time="2022-01-28T12:22:19.606Z" user="andre">corrected glossary entry to: Viśvā Purī </note>
-    <note type="updated" update="text-version" value="1.0.8" date-time="2022-05-16T14:56:48.078Z" user="martina-cotter">Updated milestone 1.32 for clarity</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2021-11-26T20:36:11.854Z" user="john">Added refs to 2 dhāraṇīs not duplicated in Dh. section.</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2021-11-29T20:02:32.125Z" user="john">Removed sigla G and A and gave correct variant references.</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2022-01-28T12:22:19.606Z" user="andre">corrected glossary entry to: Viśvā Purī </note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2022-05-16T14:56:48.078Z" user="martina-cotter">Updated milestone 1.32 for clarity</note>
+                <note type="updated" update="text-version" value="1.0.9" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.10" date-time="2022-07-26T05:57:49.921Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
         <profileDesc>
             <textClass>
@@ -1172,7 +1172,7 @@
                         <term xml:lang="Bo-Ltn" status="verified">lha</term>
                         <term xml:lang="bo">ལྷ།</term>
                         <term xml:lang="Sa-Ltn" status="verified">deva</term>
-                        <term type="definition">Cognate with the English term <emph>divine</emph>. The devas are most generally a class of divine, celestial beings who populate the narratives of Indian mythology. Devas make regular appearances in Buddhist literature at the head of the assemblies of celestial beings who attend the teachings, interact with the Buddha, bodhisattvas, and other spiritual figures, and celebrate the delivery of their teachings. In Buddhist cosmology, the devas are subdivided into numerous classes based on the specific <foreign xml:lang="Sa-Ltn" type="term">devalokas</foreign>, the “heavens” in which they reside. Traditionally there are between twenty-six and twenty-eight devalokas, divided between the desire realm (<foreign xml:lang="Sa-Ltn" type="term">kāmadhātu</foreign>), form realm (<foreign xml:lang="Sa-Ltn" type="term">rūpadhātu</foreign>), and formless realm (<foreign xml:lang="Sa-Ltn" type="term">ārūpyadhātu</foreign>). The state of deva is reached either through meritorious acts or the cultivation of subtle meditative states, and is therefore considered a higher mode of rebirth in comparison to rebirth among hell beings, pretas, and animals. Nonetheless, all the devalokas are within the three realms of saṃsāra and therefore transitory. Thus while the devas occupy the highest strata within the scheme of the five or six “destinies” (<foreign xml:lang="Sa-Ltn" type="term">gati</foreign>), the realms within saṃsāra where beings take rebirth, their state is still one determined by the fetters (<foreign xml:lang="Sa-Ltn" type="term">saṃyojana</foreign>) that bind one to the perpetual cycle of rebirth.</term>
+                        <!--<term type="definition">Cognate with the English term <emph>divine</emph>. The devas are most generally a class of divine, celestial beings who populate the narratives of Indian mythology. Devas make regular appearances in Buddhist literature at the head of the assemblies of celestial beings who attend the teachings, interact with the Buddha, bodhisattvas, and other spiritual figures, and celebrate the delivery of their teachings. In Buddhist cosmology, the devas are subdivided into numerous classes based on the specific <foreign xml:lang="Sa-Ltn" type="term">devalokas</foreign>, the “heavens” in which they reside. Traditionally there are between twenty-six and twenty-eight devalokas, divided between the desire realm (<foreign xml:lang="Sa-Ltn" type="term">kāmadhātu</foreign>), form realm (<foreign xml:lang="Sa-Ltn" type="term">rūpadhātu</foreign>), and formless realm (<foreign xml:lang="Sa-Ltn" type="term">ārūpyadhātu</foreign>). The state of deva is reached either through meritorious acts or the cultivation of subtle meditative states, and is therefore considered a higher mode of rebirth in comparison to rebirth among hell beings, pretas, and animals. Nonetheless, all the devalokas are within the three realms of saṃsāra and therefore transitory. Thus while the devas occupy the highest strata within the scheme of the five or six “destinies” (<foreign xml:lang="Sa-Ltn" type="term">gati</foreign>), the realms within saṃsāra where beings take rebirth, their state is still one determined by the fetters (<foreign xml:lang="Sa-Ltn" type="term">saṃyojana</foreign>) that bind one to the perpetual cycle of rebirth.</term> AR: REPLACED by standard definition-->
                     </gloss>
                     </item>
                     <item>
